@@ -3218,7 +3218,7 @@ User is always nil."
 	      v1 'file-error
 	      "Maximum number (%d) of symlinks exceeded" numchase-limit)))
 	 (directory-file-name result)))
-     
+
      ;; Preserve trailing "/".
      (if (string-equal (file-name-nondirectory filename) "") "/" ""))))
 
@@ -4570,14 +4570,14 @@ Only works for Bourne-like shells."
 	 'tramp-send-command
 	 (tramp-get-connection-property proc "vector" nil)
 	 (format "kill -2 %d" pid))
-	;; Wait, until the process has disappeared.
-	(with-timeout
-	    (1 (tramp-error proc 'error "Process %s did not interrupt" proc))
+	;; Wait, until the process has disappeared.  If it doesn't,
+	;; fall back to the default implementation.
+	(with-timeout (1 (ignore))
 	  (while (process-live-p proc)
 	    ;; We cannot run `tramp-accept-process-output', it blocks timers.
-	    (accept-process-output proc 0.1)))
-	;; Report success.
-	proc))))
+	    (accept-process-output proc 0.1))
+	  ;; Report success.
+	  proc)))))
 
 ;; `interrupt-process-functions' exists since Emacs 26.1.
 (when (boundp 'interrupt-process-functions)
