@@ -1,3 +1,8 @@
+2017-12-11  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-interrupt-process): Fall back to the default
+	implementation if there's no success.
+
 2017-12-08  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.3.3 released.
